--- a/docker/production/nginx/http-only-fixed.conf
+++ b/docker/production/nginx/http-only-fixed.conf
@@ -26,33 +26,31 @@ server {
         allow all;
     }
     
-    # Handle PHP files
+    # Handle PHP files with FastCGI
     location ~ \.php$ {
-        proxy_pass http://php:80;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_read_timeout 300;
-        proxy_connect_timeout 300;
-        proxy_send_timeout 300;
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_read_timeout 300;
+        fastcgi_buffer_size 128k;
+        fastcgi_buffers 4 256k;
+        fastcgi_busy_buffers_size 256k;
     }
     
     # Handle static files and directory requests
     location / {
-        try_files $uri $uri/ @php;
+        try_files $uri $uri/ /index.php?$query_string;
     }
     
-    # Fallback to PHP for all requests
-    location @php {
-        proxy_pass http://php:80;
-        proxy_set_header Host $host;
-        proxy_Set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_read_timeout 300;
-        proxy_connect_timeout 300;
-        proxy_send_timeout 300;
+    # Static file caching
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js|woff|woff2|ttf|eot|svg)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        try_files $uri =404;
     }
     
     # Block access to sensitive files (AFTER ACME challenge)
