--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -278,22 +278,25 @@ jobs:
                 echo '❌ HTTPS config file not found'
                 echo '🔍 Available nginx configs:'
                 ls -la docker/production/nginx/ || echo 'Cannot list nginx configs'
-              fi
-                echo '🔄 Switching to HTTPS configuration:'
-              echo '🔍 Stopping nginx to replace config...'
-              sudo docker exec mapit_nginx_prod nginx -s quit || echo 'Nginx was not running'
+              fi              echo '🔄 Switching to HTTPS configuration:'
+              echo '🔍 Stopping nginx container to replace config...'
+              export DB_PASSWORD='${{ secrets.DB_PASSWORD }}'
+              sudo -E docker compose -f docker-compose.production.yml stop nginx
               sleep 3
               
+              echo '🔍 Copying HTTPS config to stopped container...'
               if sudo docker cp docker/production/nginx/https.conf mapit_nginx_prod:/etc/nginx/conf.d/default.conf; then
                 echo '✅ HTTPS config copied to container'
+                  echo '🔍 Starting nginx container with new config...'
+                sudo -E docker compose -f docker-compose.production.yml start nginx
+                echo '✅ Nginx container restarted with HTTPS config'
                 
-                echo '🔍 Starting nginx with new config...'
-                sudo docker exec mapit_nginx_prod nginx
-                echo '✅ Nginx restarted with HTTPS config'
+                echo '🔍 Waiting for nginx to start...'
+                sleep 15
               else
                 echo '❌ Failed to copy HTTPS config'
-                echo '🔄 Starting nginx with original config...'
-                sudo docker exec mapit_nginx_prod nginx
+                echo '🔄 Starting nginx container with original config...'
+                sudo -E docker compose -f docker-compose.production.yml start nginx
                 exit 1
               fi
               
@@ -306,11 +309,10 @@ jobs:
               NGINX_TEST_OUTPUT=\$(sudo docker exec mapit_nginx_prod nginx -t 2>&1)
               NGINX_TEST_EXIT_CODE=\$?
               echo '   Nginx test output: '\$NGINX_TEST_OUTPUT
-              echo '   Nginx test exit code: '\$NGINX_TEST_EXIT_CODE
-                if [ \$NGINX_TEST_EXIT_CODE -eq 0 ]; then
+              echo '   Nginx test exit code: '\$NGINX_TEST_EXIT_CODE              if [ \$NGINX_TEST_EXIT_CODE -eq 0 ]; then
                 echo '✅ Nginx configuration test passed'
-                echo '🔍 Checking nginx process status:'
-                sudo docker exec mapit_nginx_prod ps aux | grep nginx || echo 'Cannot check nginx processes'
+                echo '🔍 Checking nginx container status:'
+                sudo docker ps | grep mapit_nginx_prod || echo 'Cannot find nginx container'
                 
                 echo '🔍 Testing HTTPS connectivity:'
                 sleep 10  # Give nginx time to stabilize
@@ -337,10 +339,11 @@ jobs:
                 done              else
                 echo '❌ HTTPS configuration test failed'
                 echo '🔄 Reverting to HTTP configuration:'
-                sudo docker exec mapit_nginx_prod nginx -s quit || echo 'Nginx was not running'
+                export DB_PASSWORD='${{ secrets.DB_PASSWORD }}'
+                sudo -E docker compose -f docker-compose.production.yml stop nginx
                 sleep 3
                 sudo docker cp docker/production/nginx/http-only-fixed.conf mapit_nginx_prod:/etc/nginx/conf.d/default.conf
-                sudo docker exec mapit_nginx_prod nginx
+                sudo -E docker compose -f docker-compose.production.yml start nginx
                 echo '✅ Reverted to HTTP configuration'
               fi
             else
