--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -279,24 +279,26 @@ jobs:
                 echo '🔍 Available nginx configs:'
                 ls -la docker/production/nginx/ || echo 'Cannot list nginx configs'
               fi              echo '🔄 Switching to HTTPS configuration:'
-              echo '🔍 Stopping nginx container to replace config...'
+              echo '🔍 Stopping nginx container for config replacement...'
               export DB_PASSWORD='${{ secrets.DB_PASSWORD }}'
               sudo -E docker compose -f docker-compose.production.yml stop nginx
-              sleep 3
+              echo '✅ Nginx container stopped'
+              sleep 5
               
-              echo '🔍 Copying HTTPS config to stopped container...'
+              echo '🔍 Copying HTTPS configuration to container...'
               if sudo docker cp docker/production/nginx/https.conf mapit_nginx_prod:/etc/nginx/conf.d/default.conf; then
                 echo '✅ HTTPS config copied to container'
-                  echo '🔍 Starting nginx container with new config...'
-                sudo -E docker compose -f docker-compose.production.yml start nginx
-                echo '✅ Nginx container restarted with HTTPS config'
                 
+                echo '🔍 Starting nginx container with new config...'
+                sudo -E docker compose -f docker-compose.production.yml start nginx
+                echo '✅ Nginx container restarted with HTTPS config'                
                 echo '🔍 Waiting for nginx to start...'
                 sleep 15
               else
                 echo '❌ Failed to copy HTTPS config'
                 echo '🔄 Starting nginx container with original config...'
                 sudo -E docker compose -f docker-compose.production.yml start nginx
+                echo '⚠️ Reverted to HTTP configuration due to HTTPS config copy failure'
                 exit 1
               fi
               
@@ -341,7 +343,8 @@ jobs:
                 echo '🔄 Reverting to HTTP configuration:'
                 export DB_PASSWORD='${{ secrets.DB_PASSWORD }}'
                 sudo -E docker compose -f docker-compose.production.yml stop nginx
-                sleep 3
+                echo '✅ Nginx container stopped for config revert'
+                sleep 5
                 sudo docker cp docker/production/nginx/http-only-fixed.conf mapit_nginx_prod:/etc/nginx/conf.d/default.conf
                 sudo -E docker compose -f docker-compose.production.yml start nginx
                 echo '✅ Reverted to HTTP configuration'
