Fix bash syntax error in deploy.yml
- Add missing newline between 'fi' and 'echo' statement
- Resolves: bash: syntax error near unexpected token 'echo'
- This was preventing the SSL setup from proceeding correctly

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -273,12 +273,13 @@ jobs:
               if [ -f docker/production/nginx/https.conf ]; then
                 echo '✅ HTTPS config file exists'
                 echo '🔍 Config file preview:'
-                head -10 docker/production/nginx/https.conf
-              else
+                head -10 docker/production/nginx/https.conf              else
                 echo '❌ HTTPS config file not found'
                 echo '🔍 Available nginx configs:'
                 ls -la docker/production/nginx/ || echo 'Cannot list nginx configs'
-              fi              echo '🔄 Switching to HTTPS configuration:'
+              fi
+              
+              echo '🔄 Switching to HTTPS configuration:'
               echo '🔍 Stopping nginx container for config replacement...'
               export DB_PASSWORD='${{ secrets.DB_PASSWORD }}'
               sudo -E docker compose -f docker-compose.production.yml stop nginx
