Fix SSL certificate paths in HTTPS nginx config

--- a/docker/production/nginx/https.conf
+++ b/docker/production/nginx/https.conf
@@ -22,10 +22,9 @@ server {
     server_name mapitedu.nl www.mapitedu.nl;
     
     root /var/www/html/public;
-    index index.php index.html index.htm;
-      # SSL certificates
-    ssl_certificate /etc/letsencrypt/live/mapitedu.nl/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/mapitedu.nl/privkey.pem;
+    index index.php index.html index.htm;      # SSL certificates
+    ssl_certificate /etc/nginx/ssl/live/mapitedu.nl/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/mapitedu.nl/privkey.pem;
     
     # SSL configuration
     ssl_session_timeout 1d;
