--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -263,13 +263,13 @@ jobs:
               
               echo '🔍 Certificate file details:'
               sudo docker run --rm -v current_certbot_conf:/certs alpine ls -la /certs/live/mapitedu.nl/ 2>/dev/null || echo 'Cannot list files'
-              
-              echo '🔍 Certificate validation:'
+                echo '🔍 Certificate validation:'
               CERT_SUBJECT=\$(sudo docker run --rm -v current_certbot_conf:/certs alpine openssl x509 -in /certs/live/mapitedu.nl/fullchain.pem -noout -subject 2>/dev/null || echo 'Cannot read subject')
               echo '   Subject: '\$CERT_SUBJECT
               
               echo '🔍 === NGINX HTTPS CONFIGURATION ==='
-              echo '🔍 Checking HTTPS config file:'              if [ -f docker/production/nginx/https.conf ]; then
+              echo '🔍 Checking HTTPS config file:'
+              if [ -f docker/production/nginx/https.conf ]; then
                 echo '✅ HTTPS config file exists'
                 echo '🔍 Config file preview:'
                 head -10 docker/production/nginx/https.conf
@@ -302,10 +302,10 @@ jobs:
               sleep 20
               
               echo '🔍 Verifying config was copied:'
-              sudo docker exec mapit_nginx_prod ls -la /etc/nginx/conf.d/ || echo 'Cannot list nginx config directory'
-              echo '🔍 Config file content in container:'
+              sudo docker exec mapit_nginx_prod ls -la /etc/nginx/conf.d/ || echo 'Cannot list nginx config directory'              echo '🔍 Config file content in container:'
               sudo docker exec mapit_nginx_prod head -5 /etc/nginx/conf.d/default.conf || echo 'Cannot read config file in container'
-                echo '🔍 Testing nginx configuration:'
+              
+              echo '🔍 Testing nginx configuration:'
               NGINX_TEST_OUTPUT=\$(sudo docker exec mapit_nginx_prod nginx -t 2>&1)
               NGINX_TEST_EXIT_CODE=\$?
               echo '   Nginx test output: '\$NGINX_TEST_OUTPUT
@@ -331,14 +331,14 @@ jobs:
                     echo '❌ HTTPS test failed after 3 attempts'
                     echo '🔍 Final debugging:'
                     echo '   Nginx error logs:'
-                    sudo docker logs mapit_nginx_prod --tail 15 | grep -i error || echo 'No recent errors'
-                    echo '   Nginx access logs:'
+                    sudo docker logs mapit_nginx_prod --tail 15 | grep -i error || echo 'No recent errors'                    echo '   Nginx access logs:'
                     sudo docker logs mapit_nginx_prod --tail 10 | grep -v error || echo 'No recent access logs'
                   else
                     echo \"   Waiting before retry...\"
                     sleep 5
                   fi
-                done              else
+                done
+              else
                 echo '❌ HTTPS configuration test failed'
                 echo '🔄 Reverting to HTTP configuration:'
                 export DB_PASSWORD='${{ secrets.DB_PASSWORD }}'
